security/check-aws-node-daemonset-service-account.yaml
# https://aws.github.io/aws-eks-best-practices/security/docs/iam/#update-the-aws-node-daemonset-to-use-irsa
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: aws-node-daemonset-irsa    
spec:
  generateExistingOnPolicyUpdate: true
  validationFailureAction: audit
  background: true
  rules:
  - name: validate-node-daemonset-irsa
    match:
      resources:
        kinds:
        - DaemonSet
        names: 
        - aws-node
        namespaces:
        - kube-system
    validate:
      message: "Update the aws-node daemonset to use IRSA."
      pattern:
        spec:
          serviceAccountName: "!aws-node"
