security/check-service-account-for-pods.yaml
# https://aws.github.io/aws-eks-best-practices/security/docs/iam/#scope-the-iam-role-trust-policy-for-irsa-to-the-service-account-name
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-default-service-account    
spec:
  validationFailureAction: audit
  background: true
  rules:
  - name: disallow-default-service-account
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "Using 'default' service account is not allowed."
      pattern:
        spec:
          serviceAccountName: "!default"
